fix blog post font size on mobile

--- a/_assets/stylesheets/brewhouse.css.scss
+++ b/_assets/stylesheets/brewhouse.css.scss
@@ -495,6 +495,11 @@ div.main {
     font-family: Georgia,Cambria,"Times New Roman",Times,serif;
     font-size: 18px;
     line-height: 33px;
+
+    @media (max-width: 767px) {
+      font-size: 13px;
+      line-height: 26px;
+    }
   }
   blockquote {
     color: #999;
